--- a/index.html
+++ b/index.html
@@ -224,31 +224,32 @@
         </nav>
 
         <!-- Header -->
-        <header>
-            <div class="text-center mb-4">
-                <img src="mahmoud.png" alt="Mahmoud Sabry Nasr" class="profile-img" 
-                     style="width: 350px; height: 350px; object-fit: cover; border-radius: 50%; 
-                            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);">
-            </div>
+        
+    <header>
+    <div class="text-center mb-4">
+        <img src="mahmoud.png" alt="Mahmoud Sabry Nasr" class="profile-img" 
+             style="width: 350px; height: 350px; object-fit: cover; border-radius: 50%; 
+                    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);">
+    </div>
 
-            <h1>Mahmoud Sabry Nasr</h1>
-            <p>Backend Developer | Django Specialist</p>
-            <p>
-                <a href="mailto:mahmoudsabrynasr@gmail.com"><i
-                        class="fas fa-envelope"></i>
-                    mahmoudsabrynasr@gmail.com</a> |
-                <a href="tel:+201552404457"><i class="fas fa-phone"></i> +20
-                    1552404457</a>
-            </p>
-            <p>
-                <a href="https://www.linkedin.com/in/mahmoudnasr77"><i
-                        class="fab fa-linkedin"></i></a>
-                <a href="https://github.com/MahmoudsNasr77"><i
-                        class="fab fa-github"></i></a>
-            </p>
-            <a href="https://drive.google.com/file/d/1yQLeuswdWA9TIcxNj3lqCDr7tEE_8jJ2/view?usp=sharing" class="btn btn-warning mt-3"
-                download>Download My CV</a>
-        </header>
+    <h1>Mahmoud Sabry Nasr</h1>
+    <p>Backend Developer | Odoo Developer</p> <!-- ✅ هنا التغيير -->
+    <p>
+        <a href="mailto:mahmoudsabrynasr@gmail.com"><i
+                class="fas fa-envelope"></i>
+            mahmoudsabrynasr@gmail.com</a> |
+        <a href="tel:+201552404457"><i class="fas fa-phone"></i> +20
+            1552404457</a>
+    </p>
+    <p>
+        <a href="https://www.linkedin.com/in/mahmoudnasr77"><i
+                class="fab fa-linkedin"></i></a>
+        <a href="https://github.com/MahmoudsNasr77"><i
+                class="fab fa-github"></i></a>
+    </p>
+    <a href="https://drive.google.com/file/d/1yQLeuswdWA9TIcxNj3lqCDr7tEE_8jJ2/view?usp=sharing" class="btn btn-warning mt-3"
+        download>Download My CV</a>
+</header>
 
         <!-- About -->
         <section id="about" class="container scroll-fade" data-aos="fade-up">
