--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <title>Mahmoud Sabry Nasr - Portfolio</title>
-        <!-- إضافة الشعار في التبويب -->
         <!-- Bootstrap CSS -->
         <link
             href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
@@ -233,7 +232,7 @@
     </div>
 
     <h1>Mahmoud Sabry Nasr</h1>
-    <p>Backend Developer | Odoo Developer</p> <!-- ✅ هنا التغيير -->
+    <p>Backend Developer | Odoo Developer</p> 
     <p>
         <a href="mailto:mahmoudsabrynasr@gmail.com"><i
                 class="fas fa-envelope"></i>
@@ -252,19 +251,49 @@
 </header>
 
         <!-- About -->
-        <section id="about" class="container scroll-fade" data-aos="fade-up">
-            <h2 class="section-title">About Me</h2>
+<!-- About Section -->
+<!-- Experience Section -->
+<section id="about" class="container scroll-fade" data-aos="fade-up">
+    <h2 class="section-title">Experience</h2>
 
-            <p>
-                I'm a Computer Science graduate from Zagazig University with
-                excellent academic performance (GPA 3.74/4.00).
-                I work as a freelance Django developer, focusing on building
-                efficient, scalable web applications and RESTful
-                APIs using Django REST Framework and PostgreSQL. I have
-                completed my military service and am actively pursuing new
-                opportunities.
-            </p>
-        </section>
+    <!-- IHR Company -->
+    <div class="mb-4">
+        <h5><b>Odoo Developer</b> – IHR Company (Hybrid, Egypt)</h5>
+        <p><i>Sep 2025 – Present</i></p>
+        <ul>
+            <li>Developing and customizing Odoo modules (HR, Accounting, POS, Website).</li>
+            <li>Building REST APIs and portal pages for employees and clients.</li>
+            <li>Integrating WhatsApp for business communication and automation flows.</li>
+        </ul>
+    </div>
+
+    <!-- Modern Technology Company -->
+    <div class="mb-4">
+        <h5><b>Odoo Developer</b> – Modern Technology Company (Remote, Iraq)</h5>
+        <p><i>Jul 2025 – Sep 2025</i></p>
+        <ul>
+            <li>Customized business workflows in Sales and Purchase modules.</li>
+            <li>Developed reporting and dashboard features for client requirements.</li>
+            <li>Worked remotely with cross-border teams to deliver ERP solutions.</li>
+        </ul>
+    </div>
+</section>
+
+<!-- Education Section -->
+<section id="education" class="container scroll-fade" data-aos="fade-up">
+    <h2 class="section-title">Education</h2>
+    <div class="mb-4">
+        <h5><b>Bachelor of Computer Science</b> – Zagazig University</h5>
+        <p><i>2019 – 2023</i></p>
+        <ul>
+            <li>Graduated with <b>High Excellent</b> grade.</li>
+            <li>GPA: 3.74/4.00</li>
+            <li>Focused on software engineering, algorithms, and backend development.</li>
+        </ul>
+    </div>
+</section>
+
+
     
         <!-- Skills Section -->
         <section id="skills" class="container scroll-fade" data-aos="fade-up">
@@ -272,6 +301,16 @@
 
             <!-- First Row -->
             <div class="row">
+                <!-- Odoo Framework -->
+                <div class="col-md-6 mb-3">
+                    <h5 class="text-light">Odoo Framework</h5>
+                    <div class="progress" style="height: 25px; background-color: #1f1f1f;">
+                        <div class="progress-bar" role="progressbar"
+                            style="width: 85%; background-color: #393e46;"
+                            aria-valuenow="85" aria-valuemin="0" aria-valuemax="100"></div>
+                    </div>
+                </div>
+
                 <!-- Django Framework Progress Bar -->
                 <div class="col-md-6 mb-3">
                     <h5 class="text-light">Django Framework</h5>
@@ -541,6 +580,16 @@
             data-aos="fade-up">
             <h2 class="section-title text-center text-light mb-5">Tech
                 Stack</h2>
+            <!-- Odoo -->
+            <div class="col-6 col-md-4 col-lg-3 mb-4">
+                <div class="card shadow-lg border-0 rounded-lg tech-card"
+                    style="background-color: #393e46;">
+                    <div class="card-body text-light">
+                        <h5 class="card-title">Odoo</h5>
+                        <i class="fas fa-cogs fa-3x skills-icon" style="color:#814C94;"></i>
+                    </div>
+                </div>
+            </div>
 
             <div class="row text-center">
                 <!-- Django -->
